--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,9 @@
         .catch(err => console.error('Error', err));
     }
   </script>-->
-
+  <script src="https://kit.fontawesome.com/9e9f222c39.js"></script>
   <link href="build/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
 </head>
 <body>
