--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,45 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-content>
+  <div class="top">
+    <ion-row>
+      <ion-col size="5">
+        <h1>Welcome!</h1>
+        <span class="foot">Cross country made affordable and seemless</span>
+      </ion-col>
+      <ion-col size="2">
+        <span class="logo">S</span>
+      </ion-col>
+    </ion-row>
+  </div>
+  <div class="fbuttons">
+  <ion-row>
+    <ion-col size="">
+      <button ion-button class="sign animated bounce delay-2s" round>Sign In</button>
+    </ion-col>
+    <ion-col size="">
+      <button ion-button class="reg animated bounce delay-4s" round (click)="goRegister()">Register</button>
+    </ion-col>
+  </ion-row>
+  </div>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-row style="margin-top: 40px">
+    <ion-col class="colsss">
+      <ion-label class="emailLabel">Username</ion-label>
+      <div class="ic">
+        <ion-input type="email" class="emailInput" color="light"></ion-input>
+        <i class="fas fa-user"></i>
+      </div> 
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col class="cols">
+      <ion-label class="passLabel">Password</ion-label>
+      <div class="ic">
+        <ion-input type="password" class="passInput" color="light">    
+        </ion-input>
+        <i class="fas fa-lock"></i>
+      </div>
+    </ion-col>
+  </ion-row>
+  <span class="f">Forgot password?</span>
+  <button ion-button class="log">Login</button>
 </ion-content>
